--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                       <div class="info-item padd-15">
                         
                           <span>
-                            <a href="publications/Publication2.pdf" download="PETER_MWANGI_WAWERU_CV.pdf" class="download-btn">Download CV</a>
+                            <a href="publications/Publication2.pdf" download="Publication2.pdf" class="download-btn">Download CV</a>
                           </span>
                         
                       </div>
