--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                       Hello,
                       <span>Let Me Tell You About Myself...</span>
                     </h3>
-                    <p>I am a Python developer with a strong focus on web development, artificial intelligence, and prompt engineering. I’m passionate about building practical solutions and using AI to solve real-world problems. My journey has been fueled by a curiosity to understand technology and create innovative applications. I’m eager to learn, grow, and contribute to impactful projects that combine my skills in development and AI.</p>
+                    <p>I am a Flutter developer with a strong focus on Hybrid Systems, Mobile app Development, and prompt engineering. I’m passionate about building practical solutions and using AI to solve real-world problems. My journey has been fueled by a curiosity to understand technology and create innovative applications. I’m eager to learn, grow, and contribute to impactful projects that combine my skills in development.</p>
                   </div>
                 </div>
                 <div class="row">
@@ -267,7 +267,7 @@
                     <i class="fa fa-camera-retro"></i>
                   </div>
                   <h4>Motoko</h4>
-                  <p>I leverage Motoko for smart contract development on the Internet Computer blockchain, showcasing my skills in decentralized technology and Web3 innovation.
+                  <p>I Leverage the use of Flutter to create Mobile frienly applications 
                   </p>
                 </div>
               </div>
@@ -290,7 +290,7 @@
                     <i class="fa fa-microphone"></i>
                   </div>
                   <h4>CSS</h4>
-                  <p>I use CSS to design visually appealing and responsive interfaces, enhancing user experiences with modern styling techniques and frameworks.
+                  <p>.I have leveraged the power of large language models and be able to learn to prompt them effectively
                   </p>
                 </div>
               </div>
@@ -301,7 +301,7 @@
                     <i class="fa fa-film"></i>
                   </div>
                   <h4>Solidity</h4>
-                  <p>I specialize in Solidity for developing and deploying smart contracts on the Ethereum blockchain. My expertise includes building decentralized applications (dApps), creating secure and efficient contract logic, and leveraging blockchain technology to solve real-world challenges.
+                  <p>I have Basic Knowledge on how block chain Technologies work particulaly bitcoin blockchain.
                     
                   </p>
                 </div>
@@ -337,7 +337,7 @@
                 <img src="images/img.jpeg "alt="Motoko Project Image" class="project-img">
               </a>
               <div class="description">
-                <p>This is my Motoko project where I deployed a canister. It showcases how decentralized applications can be built on the Internet Computer. Clicking on the image will direct you to the live project where you can explore its functionalities and more.</p>
+                <p>This is my Bitcoin project where I  showcase what i have learned in the Bitcoin ecosystem . Clicking on the image will direct you to the live project where you can explore its functionalities and more.</p>
               </div>
             </div>
           </div>
@@ -355,7 +355,7 @@
                 <img src="images/img6.jpg "alt="Webhock project " class="project-img">
               </a>
               <div class="description">
-                <p>Here is a webhock project that i used python to catch request sent to my web to be able to be saved to a database</p>
+                <p>Here is a project that i used leveraged flutter to create a message copier</p>
               </div>
             </div>
           </div>
