--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
         <div class="profile-item padd-15">
           <div class="profile-item-inner shadow-dark">
             <div class="profile-img">
-              <a href="https://github.com/Paramwas/webhock" target="_blank">
+              <a href="https://github.com/Paramwas/message_creator" target="_blank">
                 <img src="images/img6.jpg "alt="Webhock project " class="project-img">
               </a>
               <div class="description">
