--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/skins/color-1.css" />
     <link rel="stylesheet" href="css/style-switcher.css" />
 
-    <!--======CSS Links for font and icons======-->
+    <!--======CsSS Links for font and icons======-->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
