--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                   <div class="icon">
                     <i class="fa fa-camera-retro"></i>
                   </div>
-                  <h4>Motoko</h4>
+                  <h4>Flutter</h4>
                   <p>I Leverage the use of Flutter to create Mobile frienly applications 
                   </p>
                 </div>
